@@ -1,6 +1,10 @@
 Entries are sorted chronologically from oldest to youngest within each release,
 releases are sorted from youngest to oldest.
 
+version <next next>
+- tiltandshift filter
+
+
 version <next>:
 - libx265 encoder
 - shuffleplanes filter
